--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -3,22 +3,6 @@
  @use "../../styles/mixins";
  @import "../../styles/global";
 
-@font-face {
-    font-family: "Roboto Bold Italic";
-    src: url(../../fonts/Roboto-BoldItalic.ttf)  
-}
-@font-face {
-    font-family: "Roboto Thin";
-    src: url(../../fonts/Roboto-Thin.ttf);
-}
-@font-face {
-    font-family: "Roboto Bold";
-    src: url(../../fonts/Roboto-Bold.ttf);
-}
-@font-face {
-    font-family: "Roboto Boldd";
-    src: url(../../fonts/Roboto-Regular.ttf);
-}
 
 .header {
     position: relative;
@@ -42,7 +26,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.8); /* Cor preta com 50% de opacidade */
+        background-color: rgba(0, 0, 0, 0.8);
     }
     .index-header {
         width: 100%;
@@ -151,17 +135,19 @@
         position: absolute !important;
         top: 90% !important;
         left: 50% !important;
-        padding-bottom: 10rem !important;
         width: 330px !important;
-        height: 250px !important;
+        height: 260px !important;
         background-color: variables.$white !important;
         border-radius: 5px 5px !important;
         @include mixins.box-shadow(0px, 0px, 10px, rgba(0, 0, 0, 0.5));
         z-index: 1 !important;
+        
+       
 
         //media
         @media screen and (min-width: 1360px) and (max-width: 1920px){
             width: 500px !important;
+            height: 250px !important;
         }
 
         .card-title,
@@ -179,6 +165,7 @@
             //media
             @media screen and (min-width: 1360px) and (max-width: 1920px){
                 @include mixins.font-properties(2rem);
+                padding-top: 0;
             }
         }
         .card-subtitle .card-subtitle2{
@@ -208,6 +195,12 @@
             border: none;
             padding: 1rem;
             border-radius: 5px;
+
+            //media
+            @media screen and (min-width: 1360px) and (max-width: 1920px){
+               margin: 0.4rem auto;
+               
+            }
 
             img {
                 width: 32px;
