--- a/src/components/headerLarge/index.scss
+++ b/src/components/headerLarge/index.scss
@@ -6,7 +6,7 @@
 
 nav{
     display: none;
-    @media screen and (min-width:  1360px) and (max-width: 1920px){
+    @media screen and (min-width:  1360px){
         display: block;
         z-index: 1;
         position: relative;      
