--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -30,7 +30,7 @@
     border-radius: 5px;
     padding: 1rem 1.2rem;
 
-    @media screen and (min-width: 1360px) and (max-width: 1920px){
+    @media screen and (min-width: 1360px){
       margin: 3rem 0 3rem 3rem;
       height: 400px;
     }
