--- a/src/components/Comments/index.scss
+++ b/src/components/Comments/index.scss
@@ -4,14 +4,14 @@
  @import "../../styles/global";
 
 .comments{
-    @media screen and (min-width: 1360px) and (max-width: 1920px){
+    @media screen and (min-width: 1360px){
        display: flex;
        justify-content:center;
        flex-direction: column;
       }
 
       .container-card{
-        @media screen and (min-width: 1360px) and (max-width: 1920px){
+        @media screen and (min-width: 1360px){
             display: flex;
             justify-content:center;
         }
