--- a/src/components/ServiceContent/index.scss
+++ b/src/components/ServiceContent/index.scss
@@ -5,7 +5,7 @@
 
 
 .index-occupation-area{
-    background-color: #000;
+    background-color: variables.$darkk;
     margin-top: 4rem;
 
      //media
