--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -9,7 +9,7 @@
    @include mixins.box-shadow(0px, 0px, 10px, rgba(0, 0, 0, 0.5));
 
     //media
-    @media screen and (min-width: 1360px){
+    @media screen and (min-width: variables.$breakpoint-xl){
       width: 400px;
     }
 
