--- a/src/components/DescriptionPerson/index.scss
+++ b/src/components/DescriptionPerson/index.scss
@@ -7,7 +7,7 @@
     margin-top: 16rem;
 
      //media
-     @media screen and (min-width: 1360px){
+     @media screen and (min-width: variables.$breakpoint-xl){
         margin-top: 20rem;
      }
     
@@ -17,7 +17,7 @@
         flex-direction: column;
        
         //media
-        @media screen and (min-width: 1360px){
+        @media screen and (min-width: variables.$breakpoint-xl){
             display: flex;
             flex-direction:row;
             justify-content: space-evenly;
@@ -39,7 +39,7 @@
         transition: opacity 1s, transform 1s;
 
         //media
-        @media screen and (min-width: 1360px){
+        @media screen and (min-width: variables.$breakpoint-xl){
             margin: 0;
         }
     }
@@ -53,7 +53,7 @@
         top: -90%;
 
         //media
-        @media screen and (min-width: 1360px){
+        @media screen and (min-width: variables.$breakpoint-xl){
             height: 490px;
             top: -130%;
             left: 30%;
@@ -64,7 +64,7 @@
         .img-person {
             position: absolute !important;
             z-index: 1 !important;
-            left: -30% !important;
+            left: -33% !important;
             top: -65% !important;
             width: 326px !important;
             height: 250px !important;
@@ -73,11 +73,12 @@
 
             
         //media
-        @media screen and (min-width: 1360px){
+        @media screen and (min-width: variables.$breakpoint-xl){
             opacity: 1;
             width: 454px !important;
             height: 380px !important;
             top: -90% !important;
+            left: -30% !important;
             
         }
           }
@@ -93,7 +94,7 @@
         top: -90%;
 
         //media
-        @media screen and (min-width: 1360px){
+        @media screen and (min-width: variables.$breakpoint-xl){
             height: 470px;
             width: 200px;
             top: -130%;
@@ -103,11 +104,11 @@
     }
 
     .index-about{
-        margin: 13rem 0 0 0;
+        margin: 13rem auto 0 auto;
         padding-left: 2rem;
 
         //media
-        @media screen and (min-width: 1360px){
+        @media screen and (min-width: variables.$breakpoint-xl){
             margin: 2rem 0 0 0;
             padding-left: 4rem;
             width: 500px;
@@ -121,7 +122,7 @@
             margin: 0;
 
             //media
-        @media screen and (min-width: 1360px){
+        @media screen and (min-width: variables.$breakpoint-xl){
             @include mixins.font-properties(2.7rem);
             @include mixins.font-family('Roboto Bold Italic')
         }
@@ -145,7 +146,7 @@
             line-height: variables.$line-heigth;
 
             //media
-            @media screen and (min-width: 1360px){
+            @media screen and (min-width: variables.$breakpoint-xl){
                 max-width: 500px;
                 text-align: left;
                 @include mixins.font-properties(1.4rem);
