--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -1,4 +1,8 @@
+@use '../../styles/variables';
+@use "../../styles/mixins";
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+
 body{
 	line-height: 1.5;
 	font-family: 'Poppins', sans-serif;
@@ -9,7 +13,7 @@ body{
 	box-sizing: border-box;
 }
 .container{
-	max-width: 1170px;
+	max-width: variables.$container;
 	margin:auto;
 }
 .row{
@@ -20,7 +24,7 @@ ul{
 	list-style: none;
 }
 .footer{
-	background-color: #24262b;
+	background-color: variables.$darkk;
     padding: 70px 0;
 }
 .footer-col{
@@ -28,11 +32,10 @@ ul{
    padding: 0 15px;
 }
 .footer-col h4{
-	font-size: 18px;
-	color: #ffffff;
+	@include mixins.font-properties(18px, 500);
+	color: variables.$white;
 	text-transform: capitalize;
 	margin-bottom: 35px;
-	font-weight: 500;
 	position: relative;
 }
 .footer-col h4::before{
@@ -40,7 +43,7 @@ ul{
 	position: absolute;
 	left:0;
 	bottom: -10px;
-	background-color: #e91e63;
+	background-color: variables.$vibrantPink;
 	height: 2px;
 	box-sizing: border-box;
 	width: 50px;
@@ -49,44 +52,42 @@ ul{
 	margin-bottom: 10px;
 }
 .footer-col ul li a{
-	font-size: 16px;
+	@include mixins.font-properties(16px, 300);
 	text-transform: capitalize;
 	color: #ffffff;
 	text-decoration: none;
-	font-weight: 300;
-	color: #bbbbbb;
+	color: variables.$white;
 	display: block;
 	transition: all 0.3s ease;
 }
 .footer-col ul li a:hover{
-	color: #ffffff;
+	color: variables.$white;
 	padding-left: 8px;
 }
 .footer-col .social-links a{
 	display: inline-block;
 	height: 40px;
 	width: 40px;
-	// background-color: rgba(255,255,255,0.2);
 	margin:0 10px 10px 0;
 	text-align: center;
 	line-height: 40px;
 	border-radius: 50%;
-	color: #ffffff;
+	color: variables.$white;
 	transition: all 0.5s ease;
 }
 .footer-col .social-links a:hover{
-	color: #24262b;
-	background-color: #ffffff;
+	color: variables.$darkk;
+	background-color: variables.$white;
 }
 
 /*responsive*/
-@media(max-width: 767px){
+@media(max-width: variables.$breakpoint-m2){
   .footer-col{
     width: 50%;
     margin-bottom: 30px;
 }
 }
-@media(max-width: 574px){
+@media(max-width: variables.$breakpoint-sm){
   .footer-col{
     width: 100%;
 }
