--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -3,6 +3,10 @@
  @use "../../styles/mixins";
  @import "../../styles/global";
 
+//começa aqui
+
+// termina aq
+
 
 .header {
     position: relative;
@@ -14,10 +18,15 @@
         background-position: center;
         background-repeat: no-repeat;
         padding-bottom: 12rem;   
+        position: relative;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        filter: grayscale(40%);
         
-        @media screen and (min-width: 1360px){
+        @media screen and (min-width: variables.$breakpoint-xl){
             background-image: url(../../assets/img/bc-large.webp);
-           
         }
     }
     .overlay {
@@ -28,6 +37,21 @@
         height: 100%;
         background-color: rgba(0, 0, 0, 0.8);
     }
+    @media screen and (min-width: variables.$breakpoint-xl){
+        .shadow{
+            position: absolute;
+            top: 0;
+            left: -45%;
+            width: 40%; 
+            height: 0;
+            box-shadow: 0 0 30rem 350px rgb(255, 255, 255);
+            opacity: 0.6;
+        }
+        .content{
+            position: relative;
+          }
+    }
+   
     .index-header {
         width: 100%;
         padding: 1rem 1rem 1rem 2rem;
@@ -37,7 +61,7 @@
         display: none;
 
         //media
-        @media screen and (max-width: 1360px){
+        @media screen and (max-width: variables.$breakpoint-xl){
             display: flex;
         }
 
@@ -60,7 +84,7 @@
             padding-right: 1rem;
             
             
-            @media screen and (min-width: 1360px){
+            @media screen and (min-width: variables.$breakpoint-xl){
                 @include mixins.font-properties(4rem);
             }
 
@@ -91,11 +115,11 @@
         padding: 20px;
         
        //Media
-        @media screen and (min-width: 1360px){
+        @media screen and (min-width: variables.$breakpoint-xl){
             width: 70%;
             margin: 4rem auto 0 auto;
         }
-        @media screen and (min-width: 1800px) { 
+        @media screen and (min-width: variables.$breakpoint-xxl) { 
             padding-left: 15rem;
             
           }
@@ -107,12 +131,14 @@
             margin-top: 0.4rem;
             color: variables.$white;
             z-index: 1;   
-
             //media
-            @media screen and (min-width: 1360px) {
+            @media screen and (max-width: variables.$breakpoint-xl){
+                width: 60%;
+            }
+            @media screen and (min-width: variables.$breakpoint-xl) {
               @include mixins.font-properties(2.3rem);
             }
-            @media screen and (min-width: 1800px) {
+            @media screen and (min-width: variables.$breakpoint-xxl) {
                 @include mixins.font-properties(3.3rem);
                 
                 
@@ -123,7 +149,7 @@
             @include mixins.font-properties(1.2rem);    
              
            //media
-            @media screen and (min-width: 1360px){
+            @media screen and (min-width: variables.$breakpoint-xl){
                 @include mixins.font-properties(1.4rem);
                
             }
@@ -152,7 +178,7 @@
        
 
         //media
-        @media screen and (min-width: 1360px){
+        @media screen and (min-width: variables.$breakpoint-xl){
             width: 500px !important;
             height: 250px !important;
         }
@@ -170,7 +196,7 @@
             padding-top: 1rem;
 
             //media
-            @media screen and (min-width: 1360px){
+            @media screen and (min-width: variables.$breakpoint-xl){
                 @include mixins.font-properties(2rem);
                 padding-top: 0;
             }
@@ -184,7 +210,7 @@
             padding-top: 0.8rem;  
             
             //media
-            @media screen and (min-width: 1360px){
+            @media screen and (min-width: variables.$breakpoint-xl){
                 @include mixins.font-properties(1.2rem);
                
             }
@@ -204,7 +230,7 @@
             border-radius: 5px;
 
             //media
-            @media screen and (min-width: 1360px){
+            @media screen and (min-width: variables.$breakpoint-xl){
                margin: 0.4rem auto;
                
             }
