--- a/src/components/DescriptionPerson/index.scss
+++ b/src/components/DescriptionPerson/index.scss
@@ -118,7 +118,7 @@
 
         h3{
             font-size: 1.8rem;
-            font-family: sans-serif;
+            @include mixins.font-family('sans-serif');
             margin: 0;
 
             //media
@@ -141,7 +141,7 @@
             max-width: 310px;
             text-align: justify;
             letter-spacing: -0.01rem;
-            font-family: "Roboto Boldd", sans-serif;
+            @include mixins.font-family('Roboto Boldd');
             color: variables.$secondary-dark;
             line-height: variables.$line-heigth;
 
