--- a/src/components/ContentArticle/index.scss
+++ b/src/components/ContentArticle/index.scss
@@ -41,7 +41,7 @@
        
     }
  }
- .content{
+ .container-content{
     overflow-wrap: break-word;
     margin-top: 3rem;
     padding-left: 0.6rem;
@@ -52,14 +52,29 @@
         // border: 1px solid blue;
         width: 80%;
     }
-    p{
-        @include mixins.font-properties(1.05rem);
-        line-height: 1.6;
-        margin-top: 1rem;
-        color: variables.$secondary-dark;
+   
 
-        @media screen and (min-width: variables.$breakpoint-xl){
-            @include mixins.font-properties(1.2rem);
+    .content{
+        display: flex;
+
+        p{
+            @include mixins.font-properties(1.05rem);
+            line-height: 1.6;
+            margin-top: 1rem;
+            color: variables.$secondary-dark;
+         
+            @media screen and (min-width: variables.$breakpoint-xl){
+                @include mixins.font-properties(1.2rem);
+            }
+        }
+        span{
+            margin-right: 0.5rem;
+            display: inline-block;
+            color: variables.$darkk;
+            @include mixins.font-properties(1.1rem, 900);
+            @media screen and (min-width: variables.$breakpoint-xl){
+                @include mixins.font-properties(1.2rem, 900);
+            }
         }
     }
  }
