--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -43,7 +43,7 @@ ul{
 	position: absolute;
 	left:0;
 	bottom: -10px;
-	background-color: variables.$vibrantPink;
+	background-color: variables.$orange;;
 	height: 2px;
 	box-sizing: border-box;
 	width: 50px;
