--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -10,41 +10,25 @@
 
 .header {
     position: relative;
+    background-color: variables.$dark;
 
-    .header-bc {
-        height: 70vh;
-        background-image: url(../../assets/img/bc-header2.jpg);
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        padding-bottom: 12rem;   
-        position: relative;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        filter: grayscale(40%);
-        
-        @media screen and (min-width: variables.$breakpoint-xl){
-            background-image: url(../../assets/img/bc-large.webp);
-        }
-    }
+   
     .overlay {
         position: absolute; 
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.8);
+        background-color: rgba(0, 0, 0, 0.7);
     }
     @media screen and (min-width: variables.$breakpoint-xl){
         .shadow{
             position: absolute;
             top: 0;
             left: -45%;
-            width: 40%; 
+            width: 50%; 
             height: 0;
-            box-shadow: 0 0 30rem 150px rgb(255, 255, 255);
+            box-shadow: 0 0 30rem 100px rgb(255, 255, 255);
             opacity: 0.6;
         }
         .content{
