--- a/src/components/headerLarge/index.scss
+++ b/src/components/headerLarge/index.scss
@@ -5,7 +5,6 @@
  @import "../../styles/global";
 
 nav{
-  
     @media screen and (min-width:  variables.$breakpoint-xl){
         display: block;
         z-index: 1;
@@ -38,6 +37,7 @@ nav{
   
   .navbar .menu-items {
     display: flex;
+    z-index: 1;
     
    
  
@@ -90,8 +90,10 @@ nav{
     height: 26px;
     width: 32px;
     position: absolute;
-    top: 17px;
-    left: 20px;
+    // top: 17px; antigo
+  
+    // left: 20px; o antigo
+    left: -5%;
     z-index: 2;
     display: flex;
     flex-direction: column;
@@ -100,7 +102,21 @@ nav{
     
     @media screen and (max-width: variables.$breakpoint-xl){
       left: 90%;
+      top: 25px;
     }
+    @media screen and (min-width: variables.$breakpoint-xl){
+      left: -7%;
+      top: 10px;
+    }
+
+    img{
+      width: 50px;
+      height: 50px; 
+    }
+    .logo-screen-large{
+      top: 8px;
+    }
+   
   }
   
   .nav-container .hamburger-lines .line {
@@ -129,7 +145,7 @@ nav{
     padding-top: 0.5rem;
     height: 40vh;
     width: 100%;
-    transform: translate(-150%);
+    // transform: translate(-150%);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -210,6 +226,7 @@ nav{
     right: 15px;
     font-size: 1.2rem;
     color: #0e2431;
+    
 
     @media screen and (min-width:  variables.$breakpoint-xl){
       left: 100%;
@@ -231,6 +248,11 @@ nav{
   
   .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
     transform: rotate(-45deg);
+  }
+
+  .warning p{
+    color: red;
+    @include mixins.font-properties(1.2rem);
   }
   
   // .nav-container input[type="checkbox"]:checked ~ .logo{
