--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,7 +4,7 @@ $indigo: #6610f2;
 $purple: #6f42c1;
 $pink: #e83e8c;
 $red: #dc3545;
-$orange: #fd7e14;
+$orange: #ffa500;
 $yellow: #ffc107;
 $green: #28a745;
 $teal: #20c997;
