--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -43,9 +43,37 @@
     margin: 1.5rem auto;
     border-radius: 5px;
     padding: 1rem 1.2rem;
-    
     @media screen and (min-width: variables.$breakpoint-xl){
       margin: 3rem 0 3rem 3rem;
     
     }
+  }
+  //articlenew
+  @mixin articlenew($width) {
+    background-color: variables.$white;
+    width: $width;
+    min-height: 250px;
+    margin: 1.5rem auto;
+    border-radius: 5px;
+    padding: 1rem 1.2rem;
+    position: relative;
+    @media screen and (min-width: variables.$breakpoint-xl){
+      margin: 3rem 0 3rem 3rem;
+    
+    }
+    &::before {
+      content: "Novo";
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background-color: red;
+      color: white;
+      padding: 5px 10px;
+      font-size: 12px;
+      font-weight: bold;
+      border-radius: 3px;
+      text-transform: uppercase;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    }
+   
   }
